Fixing typo in A1 code

--- a/02_activities/assignments/a1_sampling_and_reproducibility.ipynb
+++ b/02_activities/assignments/a1_sampling_and_reproducibility.ipynb
@@ -131,7 +131,7 @@
     "  return p_wedding_infections, p_wedding_traces\n",
     "\n",
     "# Run the simulation 1000 times\n",
-    "results = 1[simulate_event(m) for m in range(1000)]\n",
+    "results = [simulate_event(m) for m in range(1000)]\n",
     "props_df = pd.DataFrame(results, columns=[\"Infections\", \"Traces\"])\n",
     "\n",
     "# Plotting the results\n",
