--- a/02_activities/assignments/a1_sampling_and_reproducibility.ipynb
+++ b/02_activities/assignments/a1_sampling_and_reproducibility.ipynb
@@ -17,6 +17,8 @@
    "id": "4ea73db3",
    "metadata": {},
    "source": [
+    "Answer\n",
+    "\n",
     "**Infection Sampling**\n",
     "In the first stage, the model randomly selects 10% of all event attendees to become infected. This is done using the np.random.choice function, which picks 100 individuals out of the total 1,000 people (200 at weddings and 800 at brunches) without repeating anyone. Everyone in the population has an equal chance of being chosen. This step represents a simple, random draw from the full group.\n",
     "\n",
@@ -40,6 +42,8 @@
    "id": "4cf5d993",
    "metadata": {},
    "source": [
+    "Answer\n",
+    "\n",
     "The number of repetitions in the simulation was modified as follows:\n",
     "\n",
     "\n",
@@ -62,6 +66,8 @@
    "id": "77613cc3",
    "metadata": {},
    "source": [
+    "Answer\n",
+    "\n",
     "To make the code reproducible, I added a fixed random seed at the start of the script using:\n",
     "\n",
     "np.random.seed(42)\n",
