Typo fix in python comment

--- a/02_activities/assignments/a1_sampling_and_reproducibility.ipynb
+++ b/02_activities/assignments/a1_sampling_and_reproducibility.ipynb
@@ -196,7 +196,7 @@
     "  return p_wedding_infections, p_wedding_traces   # This returns a tuple with the proportions of infections and traces attributed to weddings\n",
     "  # This is done to contrast real infections and traced cases (perception) of infections\n",
     "\n",
-    "# I need to set a random seed for reproducibility\n",
+    "# We need to set a random seed for reproducibility\n",
     "np.random.seed(42)\n",
     "\n",
     "# Run the simulation 1000 times\n",
