Fixed wording in markdown section

--- a/02_activities/assignments/a1_sampling_and_reproducibility.ipynb
+++ b/02_activities/assignments/a1_sampling_and_reproducibility.ipynb
@@ -55,11 +55,10 @@
    "id": "4cf5d993",
    "metadata": {},
    "source": [
-    "> When the simulations have 10 repetitions: the graphs differ a lot between runs and within a given simulation, there tends to be a large difference between infections and traces.  \n",
-    ">\n",
-    "> When simulations have 100 repetitions: the graphs across different simulations don't vary so much and within a given simulation, there tends to be more alignment between infections and traces. \n",
-    ">\n",
-    "> When simulations have 1000 repetions: the results become more stable and within a given simulation, traces are more closely approximate with infections and the graphs become smoother and more bell-shaped.\n",
+    "> Reducing the number of repetitions (from 1000 to 10 or 100) leads to less stable histograms with higher variability. This shows that the simulation results are less reproducible when the number of iterations is low due to random noise.\n",
+    "> - When the simulations have 10 repetitions: the graphs differ a lot between runs and within a given simulation, there tends to be a large difference between infections and traces.  \n",
+    "> - When simulations have 100 repetitions: the graphs across different simulations don't vary so much and within a given simulation, there tends to be more alignment between infections and traces. \n",
+    "> - When simulations have 1000 repetitions: the results become more stable and within a given simulation, traces are more closely approximate with infections and the graphs become smoother and more bell-shaped.\n",
     ">\n",
     "> With many repetitions, we gain stability: the proportions converge (Law of Large Numbers), traces better approximate infections and the distributions begin to resemble a normal curve (as one would expect because of the Central Limit Theorem for proportions).\n",
     ">\n",
@@ -79,9 +78,7 @@
    "id": "77613cc3",
    "metadata": {},
    "source": [
-    "> To make the results reproducible, I added `np.random.seed(42)` at the start of the script. This fixed the randomness, so running the simulation multiple times with the same settings gives the same results every time.\n",
-    ">\n",
-    "> I also modified the number of repetitions in the simulation from 1000 to 100: `results = [simulate_event(m) for m in range(100)]`. I chose 100 because running 100 repetitions is a manageable amount to ensure that results are reproducible and consistent. 100 runs offers enough data to ensure that my results are not outliers due to random chance while still being manageable enough to reproduce and verify the process."
+    "> To make the results reproducible, I added `np.random.seed(42)` at the start of the script. This fixed the randomness, so running the simulation multiple times with the same settings gives the same results every time."
    ]
   },
   {
@@ -94,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ab8587a0",
    "metadata": {},
    "outputs": [
