Markdown wording changes

--- a/02_activities/assignments/a1_sampling_and_reproducibility.ipynb
+++ b/02_activities/assignments/a1_sampling_and_reproducibility.ipynb
@@ -78,7 +78,7 @@
    "id": "77613cc3",
    "metadata": {},
    "source": [
-    "> To make the results reproducible, I added `np.random.seed(42)` at the start of the script. This fixed the randomness, so running the simulation multiple times with the same settings gives the same results every time."
+    "> To make the results reproducible, I added `np.random.seed(42)` before defining the *simulate_event* function. This fixed the randomness, so running the simulation multiple times with the same settings gives the same results every time."
    ]
   },
   {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ab8587a0",
    "metadata": {},
    "outputs": [
@@ -125,6 +125,9 @@
     "ATTACK_RATE = 0.10\n",
     "TRACE_SUCCESS = 0.20\n",
     "SECONDARY_TRACE_THRESHOLD = 2\n",
+    "\n",
+    "# We need to set a random seed for reproducibility\n",
+    "np.random.seed(42)\n",
     "\n",
     "def simulate_event(m):\n",
     "  \"\"\"\n",
@@ -192,9 +195,6 @@
     "\n",
     "  return p_wedding_infections, p_wedding_traces   # This returns a tuple with the proportions of infections and traces attributed to weddings\n",
     "  # This is done to contrast real infections and traced cases (perception) of infections\n",
-    "\n",
-    "# We need to set a random seed for reproducibility\n",
-    "np.random.seed(42)\n",
     "\n",
     "# Run the simulation 1000 times\n",
     "results = [simulate_event(m) for m in range(100)] # This is the line we change to modify the number of repetitions in the simulation - instead of 1000, we can use 10 or 100\n",
