--- a/02_activities/assignments/a1_sampling_and_reproducibility_trials.ipynb
+++ b/02_activities/assignments/a1_sampling_and_reproducibility_trials.ipynb
@@ -45,7 +45,7 @@
    "id": "3d9b2ccc",
    "metadata": {},
    "source": [
-    "Prompt: Modify the number of repetitions in the simulation to 10 and 100 (from the original 1000). Run the script multiple times and observe the outputted graphs. Comment on the reproducibility of the results."
+    "Modify the number of repetitions in the simulation to 10 and 100 (from the original 1000). Run the script multiple times and observe the outputted graphs. Comment on the reproducibility of the results."
    ]
   },
   {
@@ -53,7 +53,7 @@
    "id": "4cf5d993",
    "metadata": {},
    "source": [
-    "Response: The code was run at least four times for each number of repetitions (1000, 100, 10).  Plots are attached.  In general, reproducibility is better when more repetitions are performed."
+    "The code was run at least four times for each number of repetitions (1000, 100, 10).  Plots are attached.  In general, reproducibility is better when more repetitions are performed."
    ]
   },
   {
@@ -61,7 +61,7 @@
    "id": "32603ce7",
    "metadata": {},
    "source": [
-    "Prompt: Alter the code so that it is reproducible. Describe the changes you made to the code and how they affected the reproducibility of the script. The output needs to produce the same output when run multiple times."
+    "Alter the code so that it is reproducible. Describe the changes you made to the code and how they affected the reproducibility of the script. The output needs to produce the same output when run multiple times."
    ]
   },
   {
@@ -69,7 +69,7 @@
    "id": "77613cc3",
    "metadata": {},
    "source": [
-    "Response: I added a line of code near the beginning of the program to seed the random number generator: np.random.seed(42).  This seeding ensures reproducibility by making sure the same \"random\" numbers are used in each trial."
+    "I added a line of code near the beginning of the program to seed the random number generator: np.random.seed(42).  This seeding ensures reproducibility by making sure the same \"random\" numbers are used in each trial."
    ]
   },
   {
@@ -189,6 +189,124 @@
     "plt.legend()\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1354b003",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Infections</th>\n",
+       "      <th>Traces</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.150000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.012195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.010989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.260000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.150000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.180000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.011494</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.210000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Infections    Traces\n",
+       "0          0.25  0.250000\n",
+       "1          0.15  0.150000\n",
+       "2          0.19  0.012195\n",
+       "3          0.10  0.010989\n",
+       "4          0.20  0.200000\n",
+       "..          ...       ...\n",
+       "995        0.26  0.260000\n",
+       "996        0.15  0.150000\n",
+       "997        0.18  0.180000\n",
+       "998        0.14  0.011494\n",
+       "999        0.21  0.210000\n",
+       "\n",
+       "[1000 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "props_df"
    ]
   },
   {
@@ -687,6 +805,148 @@
     "plt.legend()\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "03bef54b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Infections_W</th>\n",
+       "      <th>Infections_B</th>\n",
+       "      <th>Traces_W</th>\n",
+       "      <th>Traces_B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.190000</td>\n",
+       "      <td>0.810000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.210000</td>\n",
+       "      <td>0.790000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>0.210000</td>\n",
+       "      <td>0.790000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.012195</td>\n",
+       "      <td>0.987805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.240000</td>\n",
+       "      <td>0.760000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>0.24</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.240000</td>\n",
+       "      <td>0.760000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>0.150000</td>\n",
+       "      <td>0.850000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>0.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>0.140000</td>\n",
+       "      <td>0.860000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>0.19</td>\n",
+       "      <td>0.81</td>\n",
+       "      <td>0.190000</td>\n",
+       "      <td>0.810000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Infections_W  Infections_B  Traces_W  Traces_B\n",
+       "0            0.19          0.81  0.190000  0.810000\n",
+       "1            0.21          0.79  0.210000  0.790000\n",
+       "2            0.21          0.79  0.210000  0.790000\n",
+       "3            0.19          0.81  0.012195  0.987805\n",
+       "4            0.24          0.76  0.240000  0.760000\n",
+       "..            ...           ...       ...       ...\n",
+       "995          0.24          0.76  0.240000  0.760000\n",
+       "996          0.15          0.85  0.150000  0.850000\n",
+       "997          0.25          0.75  0.250000  0.750000\n",
+       "998          0.14          0.86  0.140000  0.860000\n",
+       "999          0.19          0.81  0.190000  0.810000\n",
+       "\n",
+       "[1000 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "props_df"
    ]
   },
   {
