Fixed missing parts of assignment 1 and resubmitting

--- a/02_activities/assignments/a1_sampling_and_reproducibility.ipynb
+++ b/02_activities/assignments/a1_sampling_and_reproducibility.ipynb
@@ -17,8 +17,40 @@
    "id": "4ea73db3",
    "metadata": {},
    "source": [
-    "  `infected_indices = np.random.choice(ppl.index, size=int(len(ppl) * ATTACK_RATE), replace=False)`\n",
-    "  This is where simple random sampling is occuring. `np.random.choice(...)` is the function used. Sampling Frame is 100 people who were infected that went to either weddings, or brunches. This would be a binomial distribution."
+    "These are the 3 main sampling steps occurring in the code:\n",
+    "1. Infection:\n",
+    "  - `infected_indices = np.random.choice(ppl.index, size=int(len(ppl) * ATTACK_RATE), replace=False)`\n",
+    "\n",
+    "    - This is where simple random sampling is occuring. `np.random.choice(...)` is the function used. \n",
+    "\n",
+    "    - Sample size: 100\n",
+    "  \n",
+    "    - Sampling frame: 1000\n",
+    "  \n",
+    "    - Underlying distributions: Uniform distribution --> when every event in the situation has an equal chance of happening ie. every person in the sample has equal chance of being infected.\n",
+    "\n",
+    "2. Primary Contact Tracing:\n",
+    "  - `ppl.loc[ppl['infected'], 'traced'] = np.random.rand(sum(ppl['infected'])) < TRACE_SUCCESS`\n",
+    "  \n",
+    "    - `np.random.rand(...)` is the function used.\n",
+    "  \n",
+    "    - Sample size: subset of infected individuals who we selected to be traced (sampling)\n",
+    "  \n",
+    "    - Sampling frame: 100 infected individuals\n",
+    "  \n",
+    "    - Underlying distributions: Binomial --> Traced vs. Not traced\n",
+    "\n",
+    "3. Secondary Contact Tracing: \n",
+    "  - `event_trace_counts = ppl[ppl['traced'] == True]['event'].value_counts()`\n",
+    "  - `events_traced = event_trace_counts[event_trace_counts >= SECONDARY_TRACE_THRESHOLD].index`\n",
+    "  \n",
+    "    - We're just counting the # of events, not really sampling.\n",
+    "\n",
+    "    - Sample size: We are sampling the # of events (weddings or brunches) with which >=2 individuals were successfully traced.\n",
+    "  \n",
+    "    - Sampling frame: The total # of people that were successfully traced at either weddings or brunches\n",
+    "  \n",
+    "    - Underlying distributions: No underlying distribution"
    ]
   },
   {
@@ -138,16 +170,18 @@
     "\n",
     "  # Primary contact tracing: randomly decide which infected people get traced\n",
     "  ppl.loc[ppl['infected'], 'traced'] = np.random.rand(sum(ppl['infected'])) < TRACE_SUCCESS\n",
-    "  # out of those 100 infected patients, 20% are traced successfully (T); 80% are not traced successfully (F)\n",
+    "  # out of those 100 infected patients, i'm assigning 20% traced successfully (T); 80% are not traced successfully (F)\n",
     "  # illustrating binomial distribution (?)\n",
+    "  \n",
+    "  # sum(ppl['infected']) -> 100 infected or True's\n",
+    "  # np.random.rand(5) -> generate 5 random float's btwn [0-1] -> 0.1, 0.4, 0.5, 0.5, 0.9\n",
     "  \n",
     "  # ppl.loc[row, col]\n",
     "  # we are selectiong only the traced col's, where the infected row is True\n",
     "  # row option: ppl['infected'] -> T or F\n",
     "  # col option: 'traced'\n",
     "\n",
-    "  # sum(ppl['infected']) -> 100 infected or True's\n",
-    "  # np.random.rand(...) -> generate a random integer btwn 1-100  \n",
+    " \n",
     "\n",
     "\n",
     "  # Secondary contact tracing based on event attendance\n",
