Adding comments from Learning Support

--- a/02_activities/assignments/a1_sampling_and_reproducibility.ipynb
+++ b/02_activities/assignments/a1_sampling_and_reproducibility.ipynb
@@ -14,6 +14,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b1e4d253",
+   "metadata": {},
+   "source": [
+    "Updates added on Oct 18, 2025 based on comments from Learning Support: \n",
+    "*For primary tracing is random only among the infected (each infected has a 20% Bernoulli chance to be traced). So the frame here is the infected set.\n",
+    "*For Secondary Contact Tracing, it’s a bit more nuanced. This is not snowball sampling, which typically involves following individual social networks outward. In our case, the code doesn’t trace networks — instead, it deterministically includes all infected individuals from events that already have two or more traced cases. There's no random sampling here — just a rule-based inclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4ea73db3",
    "metadata": {},
    "source": [
