is this the right branch?

--- a/02_activities/assignments/a1_sampling_and_reproducibility.ipynb
+++ b/02_activities/assignments/a1_sampling_and_reproducibility.ipynb
@@ -19,7 +19,8 @@
    "source": [
     "Initially, simple random sampling without replacement is used to determine which individuals are infected, the function used here is np.random.choice. The model here indicates that 10% of individuals or 100 individuals within the population will be infection.   Our initial sampling frame is the 1000 individuals within the community. \n",
     "\n",
-    "Our second sampling occurs during primary contact tracing, where each infected individual (n=100) only has a 20% independent probability of being traced. At this stage, our sampling frame consists only of the infected individuals in the community (n=100). \n"
+    "Our second sampling occurs during primary contact tracing, where each infected individual (n=100) only has a 20% independent probability of being traced. At this stage, our sampling frame consists only of the infected individuals in the community (n=100). \n",
+    "\n"
    ]
   },
   {
